force-app/main/default/objects/PDF_Floorplan__c/PDF_Floorplan__c.object-meta.xml
<CustomObject>
    <description>To store the pdf floorplans of manual floorplan. To store the updated document.</description>
    <label>PDF Floorplan</label>
    <nameField>
        <displayFormat>PDF-{00000}</displayFormat>
        <label>PDF Floor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDF Floorplans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>