force-app/main/default/objects/PDF_Floorplan__c/fields/Event_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent object for PDF Floorplan. One event tab can have many PDF floorplans.</description>
    <label>Event Tab</label>
    <referenceTo>Event_Tabs__c</referenceTo>
    <relationshipLabel>PDF Floorplans</relationshipLabel>
    <relationshipName>PDF_Floorplans</relationshipName>
    <type>Lookup</type>
</CustomField>