force-app/main/default/objects/PDF_Floorplan__c/fields/PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Name__c</fullName>
    <description>This field stores the name of the pdf that we are going to store.</description>
    <label>PDF Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>