force-app/main/default/objects/PDF_Floorplan__c/fields/PDF_Type__c.field-meta.xml
<CustomField>
    <fullName>PDF_Type__c</fullName>
    <description>This is a picklist of pdf type which are categorised into groups 1, group 2 etc.</description>
    <label>PDF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>