force-app/main/default/objects/PDF_Floorplan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Tab__c</columns>
    <columns>PDF_Name__c</columns>
    <columns>PDF_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>